<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="4dp">

    <TextView
        android:id="@+id/tv_biodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/biodata"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_realname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="10dp"
        android:text="@string/realName"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_data_realname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_biodata" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_realname"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_realname" />

    <TextView
        android:id="@+id/tv_homeplanet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/homeplanet"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_age"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_age" />

    <TextView
        android:id="@+id/tv_data_realname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/legends_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_realname"
        app:layout_constraintTop_toBottomOf="@+id/tv_realname" />

    <TextView
        android:id="@+id/tv_data_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/age_data"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_data_realname"
        app:layout_constraintTop_toBottomOf="@+id/tv_age" />

    <TextView
        android:id="@+id/tv_data_planet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/planet_data"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_data_age"
        app:layout_constraintTop_toBottomOf="@+id/tv_homeplanet" />

</androidx.constraintlayout.widget.ConstraintLayout>