<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_data_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/legends_name"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_data_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_data_name"
        app:layout_constraintStart_toStartOf="@+id/tv_data_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_name" />

    <TextView
        android:id="@+id/tv_data_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/detail_description"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_data_title"
        app:layout_constraintStart_toStartOf="@+id/tv_data_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_data_title" />
</androidx.constraintlayout.widget.ConstraintLayout>